--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,10 @@
 {
   "tasks": { "start": "deno run -A --watch=static/,routes/ dev.ts" },
-  "importMap": "./import_map.json",
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "imports": {
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.27",
     "preact": "npm:preact@^10.25.2",
-    "@preact/signals": "npm:@preact/signals@^1.3.1"
+    "@preact/signals": "npm:@preact/signals@^1.3.1",
+    "gfm": "jsr:@deno/gfm"
   }
 }
