--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,10 @@
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "imports": {
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.27",
+    "@fresh/plugin-tailwind": "jsr:@fresh/plugin-tailwind@^0.0.1-alpha.7",
     "preact": "npm:preact@^10.25.2",
     "@preact/signals": "npm:@preact/signals@^1.3.1",
-    "gfm": "jsr:@deno/gfm"
+    "gfm": "jsr:@deno/gfm",
+    "tailwindcss": "npm:tailwindcss@^3.4.16"
   }
 }
