--- a/deno.json
+++ b/deno.json
@@ -2,11 +2,22 @@
   "tasks": { "start": "deno run -A --watch=static/,routes/ dev.ts" },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "imports": {
+    "@std/yaml": "jsr:@std/yaml@^1.0.5",
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.27",
     "@fresh/plugin-tailwind": "jsr:@fresh/plugin-tailwind@^0.0.1-alpha.7",
     "preact": "npm:preact@^10.25.2",
     "@preact/signals": "npm:@preact/signals@^1.3.1",
     "gfm": "jsr:@deno/gfm",
-    "tailwindcss": "npm:tailwindcss@^3.4.16"
+    "tailwindcss": "npm:tailwindcss@^3.4.16",
+    "unified": "npm:unified@^11.0.5",
+    "remark-parse": "npm:remark-parse@^11.0.0",
+    "remark-stringify": "npm:remark-stringify@^11.0.0",
+    "remark-frontmatter": "npm:remark-frontmatter@^5.0.0",
+    "remark-rehype": "npm:remark-rehype@^11.1.1",
+    "remark-gfm": "npm:remark-gfm@^4.0.0",
+    "rehype-stringify": "npm:rehype-stringify@^10.0.1",
+    "visit": "npm:unist-util-visit@^5.0.0",
+    "vfile": "npm:vfile@^6.0.3",
+    "@types:unist": "npm:@types/unist@^3.0.3"
   }
 }
